# nodeskclaw

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.zh-CN.md  dev.sh  docker-compose.yml  features.yaml
.cursor/rules/: ce-ee-boundary.mdc  coding-style.mdc  docs-first-workflow.mdc  docs-writing-style.mdc  first-principles.mdc  runtime-provider-awareness.mdc  sensitive-info-policy.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-runtime-updates.yml
deploy/: README.md  deploy.sh  init-secrets.sh
nanobot-security-layer/: README.md  pyproject.toml  test_security_runtime.py
nanobot-security-layer/nanobot_security_layer/: __init__.py  injector.py  startup.py  types.py  ws_client.py
nodeskclaw-artifacts/: README.md  common.sh
nodeskclaw-backend/: .env.example  Dockerfile  README.md  pyproject.toml
nodeskclaw-frontend/: index.html  vite.config.ts
nodeskclaw-llm-proxy/: .env.example  README.md
nodeskclaw-portal/: README.md  index.html  package-lock.json  package.json  vite.config.ts
nodeskclaw-tunnel-bridge/: README.md
openclaw-channel-nodeskclaw/: README.md  index.ts  package.json
openclaw-security-layer/: README.md  index.ts  openclaw.plugin.json  package.json  test_security_runtime.mts
scripts/: nanobot-security-test.Dockerfile  openclaw-security-test.Dockerfile  security_mock_server.py  setup-ee.sh  upload_seeds_to_genehub.py  zeroclaw-security-test.Dockerfile
zeroclaw-security-layer/: Cargo.toml  README.md
(+270 files in other folders)
